# VELOSO_ALMEIDA_LLAMA

./: app.py  pyproject.toml  requeriments.txt
